...

            <TextView
                android:id="@+id/textview_dialog_snmp_defaults_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textview_dialog_snmp_defaults_snmp_version_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radiobutton_dialog_snmp_defaults_snmp_version_v1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radiobutton_dialog_snmp_defaults_snmp_version_v2c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radiobutton_dialog_snmp_defaults_snmp_version_v3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textview_dialog_snmp_defaults_snmp_port_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:labelFor="@id/edittext_dialog_snmp_defaults_snmp_port"
                android:text="@string/label_dialog_snmp_defaults_snmp_port" />

...

            <TextView
                android:id="@+id/textview_dialog_snmp_defaults_snmp_transport_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radiobutton_dialog_snmp_defaults_snmp_transport_udp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radiobutton_dialog_snmp_defaults_snmp_transport_tcp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textview_dialog_snmp_defaults_snmp_auth_algorithm_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <Spinner
                android:id="@+id/spinner_dialog_snmp_defaults_snmp_auth_algorithm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textview_dialog_snmp_defaults_snmp_priv_algorithm_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <Spinner
                android:id="@+id/spinner_dialog_snmp_defaults_snmp_priv_algorithm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <ImageView
                android:id="@+id/imageview_dialog_snmp_defaults_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <ImageView
                android:id="@+id/imageview_dialog_snmp_defaults_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
