<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="label_dialog_snmp_defaults_ok">@android:string/ok</string>
    <string name="label_dialog_snmp_defaults_cancel">@android:string/cancel</string>
    <string name="label_dialog_snmp_defaults_title">SNMP settings</string>
    <string name="label_dialog_snmp_defaults_snmp_version">SNMP version</string>
    <string name="label_dialog_snmp_defaults_snmp_port">SNMP port</string>
    <string name="label_dialog_snmp_defaults_snmp_transport">Transport protocol</string>
    <string name="label_dialog_snmp_defaults_snmp_auth_algorithm">Auth algorithm</string>
    <string name="label_dialog_snmp_defaults_snmp_priv_algorithm">Privacy algorithm</string>
    <integer name="edittext_dialog_snmp_defaults_snmp_port_max_length">5</integer>
</resources>
