...
    <integer name="task_accesstype_default">1</integer>
    <string name="task_accesstype_key">task_accesstype_key</string>
    <string name="task_address_default">192.168.178.1</string>
    <string name="task_address_key">task_address_key</string>
    <integer name="task_port_default">22</integer>
    <string name="task_port_key">task_port_key</string>
    <integer name="task_snmp_port_default">161</integer>
    <string name="task_snmp_port_key">task_snmp_port_key</string>
    <integer name="task_interval_default">15</integer>
    <string name="task_interval_key">task_interval_key</string>
    <bool name="task_onlywifi_default">false</bool>
    <string name="task_onlywifi_key">task_onlywifi_key</string>
    <bool name="task_notification_default">false</bool>
...
