...
                android:visibility="gone"
                android:text="" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageview_dialog_validator_error_ok"
            android:paddingTop="@dimen/imageview_dialog_validator_error_ok_padding_top"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/label_dialog_validator_error_ok"
            app:srcCompat="@drawable/icon_ok_selector" />

...
